[tool.poetry]
name = "hexlet-test"
version = "0.1.0"
description = ""
authors = ["qwerty <Kehsa754@gmail.com>"]
readme = "README.md"
packages = [
  { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
